# WirePatrol

./: .gitignore  NOTICE.md  README.md  pyproject.toml
notebook/: WirePatrol_data_preproces.ipynb  WirePatrol_prototypes.ipynb  prototype.py
scripts/: capture_packets.sh
src/: config.yaml
src/data/: bruteforce.py  cli_data.py  dos_flood.py  pentest_utils.py
src/utils/: paths.py
