[project]
name = "wirepatrol"
version = "0.1.0"
description = "Wireshark AI plugin for anomaly detection."
authors = [
    {name = "Kamil Solski",email = "kamil.solski@onet.pl"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyshark (>=0.6,<0.7)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
